@@ -1,3 +1,11 @@
+2001-12-18  David Billinghurst <David.Billinghurst@riotinto.com>
+
+        * h/gnuwin95.h:  Cruft removal and update
+	(SA_RESTART): Surround by #if 0/#endif 
+	(fopen_binary): Remove
+	(fopen): Remove redefinition to fopen_binary
+
+
 2001-04-15  Bill Schelter  <wfs@linux163.ma.utexas.edu>
 
 	*  Added changes to allow the loading .o files compiled
